--- a/codegen/templates/endpoint.tmpl
+++ b/codegen/templates/endpoint.tmpl
@@ -172,7 +172,11 @@ func (handler *{{$handlerName}}) HandleRequest(
 	{{if eq .ResponseType "" -}}
 	res.WriteJSONBytes({{.OKStatusCode.Code}}, cliRespHeaders, nil)
 	{{else if eq .ResponseType "*string" }}
-	res.WriteJSONBytes({{.OKStatusCode.Code}}, cliRespHeaders, response)
+	if response == nil {
+	  res.WriteJSONBytes({{.OKStatusCode.Code}}, cliRespHeaders, nil)
+	} else {
+	  res.WriteJSONBytes({{.OKStatusCode.Code}}, cliRespHeaders, []byte{*response})
+	}
 	{{- else -}}
 	res.WriteJSON({{.OKStatusCode.Code}}, cliRespHeaders, response)
 	{{- end }}
