--- a/codegen/templates/endpoint.tmpl
+++ b/codegen/templates/endpoint.tmpl
@@ -282,7 +282,7 @@ func (w {{$workflow}}) Handle(
 				{{if eq $responseType ""}}
 				return nil, serverErr
 				{{else if eq $responseType "string" }}
-				return "", nil, err
+				return "", nil, serverErr
 				{{else}}
 				return nil, nil, serverErr
 				{{end}}
